[gd_scene load_steps=25 format=4 uid="uid://w0sm6xpyscnt"]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1_84mrw"]
[ext_resource type="TileSet" uid="uid://cs34vyt8rsjpu" path="res://scenes/ui/UI.tres" id="2_itmgn"]
[ext_resource type="PackedScene" uid="uid://c4srcc524xt8x" path="res://scenes/ui/tower_button.tscn" id="3_1mreq"]
[ext_resource type="FontFile" uid="uid://0o30bdwr77j7" path="res://assets/UI/DigitalDisco.ttf" id="3_7q3s8"]
[ext_resource type="LabelSettings" uid="uid://dxyu4wwedjkag" path="res://generic/other/prices.tres" id="4_fom0d"]
[ext_resource type="PackedScene" uid="uid://bh1wl6c05pluf" path="res://scenes/towers/types/spear_tower.tscn" id="5_64q8l"]
[ext_resource type="Texture2D" uid="uid://do7qcr7bc56f7" path="res://assets/world/towers/spear/spear_icon.png" id="5_hdfx4"]
[ext_resource type="Texture2D" uid="uid://buva6h73rrev0" path="res://assets/world/towers/bomb/bomb_icon.png" id="7_nki3j"]
[ext_resource type="PackedScene" uid="uid://bjsgdd4ajr755" path="res://scenes/towers/types/bomb_tower.tscn" id="7_pwo0p"]
[ext_resource type="Texture2D" uid="uid://jyee3vbgq4qo" path="res://assets/world/towers/fire/fire_icon.png" id="9_qqti8"]
[ext_resource type="PackedScene" uid="uid://b0molxwt10pmg" path="res://scenes/towers/types/fire_tower.tscn" id="9_ri6sn"]
[ext_resource type="Texture2D" uid="uid://di6sup44a4luk" path="res://assets/world/towers/electric/electric_icon.png" id="11_2asy0"]
[ext_resource type="PackedScene" uid="uid://u408jl0ireji" path="res://scenes/towers/types/electric_tower.tscn" id="11_eur2l"]
[ext_resource type="Texture2D" uid="uid://bhfocd2grayan" path="res://assets/UI/moneyicon.png" id="13_xs00y"]
[ext_resource type="Texture2D" uid="uid://dmch2bqdf76x" path="res://assets/UI/interesticon.png" id="14_6608h"]
[ext_resource type="Texture2D" uid="uid://db7088v7llo4e" path="res://assets/UI/healthicon.png" id="15_fboio"]

[sub_resource type="LabelSettings" id="LabelSettings_6bmdf"]
font = ExtResource("3_7q3s8")
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_bet5i"]
font = ExtResource("3_7q3s8")

[sub_resource type="LabelSettings" id="LabelSettings_lorle"]
font = ExtResource("3_7q3s8")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_g5cy7"]
font = ExtResource("3_7q3s8")

[sub_resource type="Animation" id="Animation_ugpk3"]
resource_name = "GraceClose"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Timer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buy:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 32)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaveName:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-56, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Balance:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_6jotv"]
resource_name = "GraceOpen"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Timer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 16), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buy:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 32), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaveName:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-56, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Balance:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dfcr6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Timer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gk3vg"]
_data = {
"GraceClose": SubResource("Animation_ugpk3"),
"GraceOpen": SubResource("Animation_6jotv"),
"RESET": SubResource("Animation_dfcr6")
}

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_84mrw")

[node name="Timer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAhABQAAAASAA0AAAAhABUAAAASAA4AAAAhABYAAAASAA4AAAAiABQAAAATAA0AAAAiABUAAAATAA4AAAAiABYAAAATAA4AAAAjABQAAAATAA0AAAAjABUAAAATAA4AAAAjABYAAAATAA4AAAAkABQAAAATAA0AAAAkABUAAAATAA4AAAAkABYAAAATAA4AAAAlABQAAAATAA0AAAAlABUAAAATAA4AAAAlABYAAAATAA4AAAAmABQAAAAUAA0AAAAmABUAAAAUAA4AAAAmABYAAAAUAA4AAAA=")
tile_set = ExtResource("2_itmgn")

[node name="TimerLable" type="Label" parent="Timer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 265.0
offset_top = 161.0
offset_right = 311.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 0
text = "00.00"
label_settings = SubResource("LabelSettings_6bmdf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buy" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Prices" type="Control" parent="Buy"]
anchors_preset = 0

[node name="PriceSpear" type="TileMapLayer" parent="Buy/Prices"]
tile_map_data = PackedByteArray("AAAQABAAAAAVAA0AAAARABAAAAAWAA0AAAASABAAAAAWAA0AAAATABAAAAAXAA0AAAATABEAAAAXAA4AAAAQABEAAAAVAA4AAAARABEAAAAWAA4AAAASABEAAAAWAA4AAAA=")
tile_set = ExtResource("2_itmgn")
metadata/_edit_lock_ = true

[node name="SpearPrice" type="Label" parent="Buy/Prices/PriceSpear"]
unique_name_in_owner = true
offset_left = 132.0
offset_top = 133.0
offset_right = 158.0
offset_bottom = 144.0
text = "200"
label_settings = ExtResource("4_fom0d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriceBomb" type="TileMapLayer" parent="Buy/Prices"]
tile_map_data = PackedByteArray("AAAUABAAAAAVAA0AAAAUABEAAAAVAA4AAAAVABAAAAAWAA0AAAAVABEAAAAWAA4AAAAWABAAAAAWAA0AAAAWABEAAAAWAA4AAAAXABAAAAAXAA0AAAAXABEAAAAXAA4AAAA=")
tile_set = ExtResource("2_itmgn")
metadata/_edit_lock_ = true

[node name="Bombprice" type="Label" parent="Buy/Prices/PriceBomb"]
unique_name_in_owner = true
offset_left = 164.0
offset_top = 133.0
offset_right = 190.0
offset_bottom = 144.0
text = "400"
label_settings = ExtResource("4_fom0d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriceFire" type="TileMapLayer" parent="Buy/Prices"]
tile_map_data = PackedByteArray("AAAYABAAAAAVAA0AAAAYABEAAAAVAA4AAAAZABAAAAAWAA0AAAAZABEAAAAWAA4AAAAaABAAAAAWAA0AAAAaABEAAAAWAA4AAAAbABAAAAAXAA0AAAAbABEAAAAXAA4AAAA=")
tile_set = ExtResource("2_itmgn")
metadata/_edit_lock_ = true

[node name="FirePrice" type="Label" parent="Buy/Prices/PriceFire"]
unique_name_in_owner = true
offset_left = 196.0
offset_top = 133.0
offset_right = 222.0
offset_bottom = 144.0
text = "500"
label_settings = ExtResource("4_fom0d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriceMage" type="TileMapLayer" parent="Buy/Prices"]
tile_map_data = PackedByteArray("AAAcABAAAAAVAA0AAAAcABEAAAAVAA4AAAAdABAAAAAWAA0AAAAdABEAAAAWAA4AAAAeABAAAAAWAA0AAAAeABEAAAAWAA4AAAAfABAAAAAXAA0AAAAfABEAAAAXAA4AAAA=")
tile_set = ExtResource("2_itmgn")
metadata/_edit_lock_ = true

[node name="MagePrice" type="Label" parent="Buy/Prices/PriceMage"]
unique_name_in_owner = true
offset_left = 227.0
offset_top = 133.0
offset_right = 253.0
offset_bottom = 144.0
text = "700"
label_settings = ExtResource("4_fom0d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyBG" type="TileMapLayer" parent="Buy"]
tile_map_data = PackedByteArray("AAAfABQAAAAUAA4AAAAeABQAAAATAA4AAAAdABQAAAATAA4AAAAcABQAAAATAA4AAAAbABQAAAATAA4AAAAaABQAAAATAA4AAAAZABQAAAATAA4AAAAYABQAAAATAA4AAAAXABQAAAATAA4AAAAWABQAAAATAA4AAAAVABQAAAATAA4AAAAUABQAAAATAA4AAAATABQAAAATAA4AAAASABQAAAATAA4AAAARABQAAAATAA4AAAAQABQAAAASAA4AAAAQABYAAAASAA4AAAAQABUAAAASAA4AAAAfABUAAAAUAA4AAAAfABYAAAAUAA4AAAAeABUAAAATAA4AAAAeABYAAAATAA4AAAAdABYAAAATAA4AAAAcABYAAAATAA4AAAAbABYAAAATAA4AAAAaABYAAAATAA4AAAAZABYAAAATAA4AAAAYABYAAAATAA4AAAAXABYAAAATAA4AAAAWABYAAAATAA4AAAAVABYAAAATAA4AAAAUABYAAAATAA4AAAATABYAAAATAA4AAAASABYAAAATAA4AAAARABYAAAATAA4AAAARABUAAAATAA4AAAASABUAAAATAA4AAAATABUAAAATAA4AAAAUABUAAAATAA4AAAAVABUAAAATAA4AAAAWABUAAAATAA4AAAAXABUAAAATAA4AAAAYABUAAAATAA4AAAAZABUAAAATAA4AAAAaABUAAAATAA4AAAAbABUAAAATAA4AAAAcABUAAAATAA4AAAAdABUAAAATAA4AAAAQABIAAAASAA0AAAAfABIAAAAUAA0AAAAfABMAAAAUAA4AAAAeABIAAAATAA0AAAAdABIAAAATAA0AAAAcABIAAAATAA0AAAAbABIAAAATAA0AAAAaABIAAAATAA0AAAAZABIAAAATAA0AAAAYABIAAAATAA0AAAAXABIAAAATAA0AAAAWABIAAAATAA0AAAAVABIAAAATAA0AAAAUABIAAAATAA0AAAATABIAAAATAA0AAAASABIAAAATAA0AAAARABIAAAATAA0AAAAQABMAAAASAA4AAAARABMAAAATAA4AAAASABMAAAATAA4AAAATABMAAAATAA4AAAAUABMAAAATAA4AAAAVABMAAAATAA4AAAAWABMAAAATAA4AAAAXABMAAAATAA4AAAAYABMAAAATAA4AAAAZABMAAAATAA4AAAAaABMAAAATAA4AAAAbABMAAAATAA4AAAAcABMAAAATAA4AAAAdABMAAAATAA4AAAAeABMAAAATAA4AAAA=")
tile_set = ExtResource("2_itmgn")

[node name="BuyButtons" type="TileMapLayer" parent="Buy"]
tile_map_data = PackedByteArray("AAAQABIAAAAVAA0AAAARABIAAAAWAA0AAAASABIAAAAWAA0AAAATABIAAAAXAA0AAAAQABMAAAAVAA4AAAAQABQAAAAVAA4AAAATABMAAAAXAA4AAAATABQAAAAXAA4AAAATABUAAAAXAA4AAAASABUAAAAWAA4AAAARABUAAAAWAA4AAAAQABUAAAAVAA4AAAARABMAAAAWAA4AAAARABQAAAAWAA4AAAASABQAAAAWAA4AAAASABMAAAAWAA4AAAAQABYAAAAVAA8AAAATABYAAAAXAA8AAAASABYAAAAWAA8AAAARABYAAAAWAA8AAAAUABIAAAAVAA0AAAAUABMAAAAVAA4AAAAUABQAAAAVAA4AAAAUABUAAAAVAA4AAAAUABYAAAAVAA8AAAAVABIAAAAWAA0AAAAVABMAAAAWAA4AAAAVABQAAAAWAA4AAAAVABUAAAAWAA4AAAAVABYAAAAWAA8AAAAWABIAAAAWAA0AAAAWABMAAAAWAA4AAAAWABQAAAAWAA4AAAAWABUAAAAWAA4AAAAWABYAAAAWAA8AAAAXABIAAAAXAA0AAAAXABMAAAAXAA4AAAAXABQAAAAXAA4AAAAXABUAAAAXAA4AAAAXABYAAAAXAA8AAAAYABIAAAAVAA0AAAAYABMAAAAVAA4AAAAYABQAAAAVAA4AAAAYABUAAAAVAA4AAAAYABYAAAAVAA8AAAAZABIAAAAWAA0AAAAZABMAAAAWAA4AAAAZABQAAAAWAA4AAAAZABUAAAAWAA4AAAAZABYAAAAWAA8AAAAaABIAAAAWAA0AAAAaABMAAAAWAA4AAAAaABQAAAAWAA4AAAAaABUAAAAWAA4AAAAaABYAAAAWAA8AAAAbABIAAAAXAA0AAAAbABMAAAAXAA4AAAAbABQAAAAXAA4AAAAbABUAAAAXAA4AAAAbABYAAAAXAA8AAAAcABIAAAAVAA0AAAAcABMAAAAVAA4AAAAcABQAAAAVAA4AAAAcABUAAAAVAA4AAAAcABYAAAAVAA8AAAAdABIAAAAWAA0AAAAdABMAAAAWAA4AAAAdABQAAAAWAA4AAAAdABUAAAAWAA4AAAAdABYAAAAWAA8AAAAeABIAAAAWAA0AAAAeABMAAAAWAA4AAAAeABQAAAAWAA4AAAAeABUAAAAWAA4AAAAeABYAAAAWAA8AAAAfABIAAAAXAA0AAAAfABMAAAAXAA4AAAAfABQAAAAXAA4AAAAfABUAAAAXAA4AAAAfABYAAAAXAA8AAAA=")
tile_set = ExtResource("2_itmgn")

[node name="Spear" parent="Buy/BuyButtons" instance=ExtResource("3_1mreq")]
offset_left = 130.0
offset_top = 147.0
offset_right = 158.0
offset_bottom = 179.0
texture_normal = ExtResource("5_hdfx4")
stretch_mode = 3
tower = ExtResource("5_64q8l")
price = 200

[node name="Bomb" parent="Buy/BuyButtons" instance=ExtResource("3_1mreq")]
offset_left = 162.0
offset_top = 147.0
offset_right = 190.0
offset_bottom = 179.0
texture_normal = ExtResource("7_nki3j")
stretch_mode = 3
tower = ExtResource("7_pwo0p")
price = 400

[node name="Fire" parent="Buy/BuyButtons" instance=ExtResource("3_1mreq")]
offset_left = 194.0
offset_top = 147.0
offset_right = 222.0
offset_bottom = 179.0
texture_normal = ExtResource("9_qqti8")
stretch_mode = 3
tower = ExtResource("9_ri6sn")
price = 500

[node name="Electric" parent="Buy/BuyButtons" instance=ExtResource("3_1mreq")]
offset_left = 226.0
offset_top = 147.0
offset_right = 254.0
offset_bottom = 179.0
texture_normal = ExtResource("11_2asy0")
stretch_mode = 3
tower = ExtResource("11_eur2l")
price = 700

[node name="WaveName" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAOABQAAAAUAA0AAAANABQAAAATAA0AAAAMABQAAAATAA0AAAALABQAAAATAA0AAAAKABQAAAATAA0AAAAJABQAAAATAA0AAAAIABQAAAATAA0AAAAOABUAAAAUAA4AAAAOABYAAAAUAA4AAAANABUAAAATAA4AAAANABYAAAATAA4AAAAMABYAAAATAA4AAAALABYAAAATAA4AAAAKABYAAAATAA4AAAAJABYAAAATAA4AAAAIABYAAAATAA4AAAAIABUAAAATAA4AAAAJABUAAAATAA4AAAAKABUAAAATAA4AAAALABUAAAATAA4AAAAMABUAAAATAA4AAAA=")
tile_set = ExtResource("2_itmgn")

[node name="WaveLable" type="Label" parent="WaveName"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 161.0
offset_right = 119.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 0
text = "wave 1"
label_settings = SubResource("LabelSettings_6bmdf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Balance" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAjAAAAAAATAA4AAAAjAAEAAAATAA4AAAAkAAAAAAATAA4AAAAkAAEAAAATAA4AAAAlAAAAAAATAA4AAAAlAAEAAAATAA4AAAAmAAAAAAAUAA4AAAAmAAEAAAAUAA4AAAAmAAIAAAAUAA8AAAAlAAIAAAATAA8AAAAkAAIAAAATAA8AAAAjAAIAAAATAA8AAAAiAAIAAAATAA8AAAAiAAAAAAATAA4AAAAiAAEAAAATAA4AAAAhAAIAAAASAA8AAAAhAAAAAAASAA4AAAAhAAEAAAASAA4AAAAgAAEAAAATAA8AAAAeAAEAAAASAA8AAAAfAAEAAAATAA8AAAAeAAAAAAASAA4AAAAfAAAAAAATAA4AAAAgAAAAAAATAA4AAAA=")
tile_set = ExtResource("2_itmgn")

[node name="MoneyIcon" type="TextureRect" parent="Balance"]
offset_left = 264.0
offset_right = 312.0
offset_bottom = 24.0
texture = ExtResource("13_xs00y")
stretch_mode = 2

[node name="InterestIcon" type="TextureRect" parent="Balance"]
offset_left = 240.0
offset_right = 264.0
offset_bottom = 16.0
texture = ExtResource("14_6608h")
stretch_mode = 2

[node name="Money" type="Label" parent="Balance"]
offset_left = 265.0
offset_top = -1.0
offset_right = 311.0
offset_bottom = 25.0
text = "0"
label_settings = SubResource("LabelSettings_bet5i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Interest" type="Label" parent="Balance"]
offset_left = 241.0
offset_right = 264.0
offset_bottom = 14.0
text = "+0"
label_settings = SubResource("LabelSettings_lorle")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABABQAAAASAA4AAAACABQAAAATAA4AAAADABQAAAATAA4AAAAEABQAAAATAA4AAAAFABQAAAATAA4AAAAGABQAAAATAA4AAAABABUAAAASAA4AAAACABUAAAATAA4AAAADABUAAAATAA4AAAAEABUAAAATAA4AAAAFABUAAAATAA4AAAAGABUAAAATAA4AAAAGABYAAAATAA4AAAABABYAAAASAA4AAAACABYAAAATAA4AAAADABYAAAATAA4AAAAEABYAAAATAA4AAAAFABYAAAATAA4AAAABABMAAAASAA0AAAAGABMAAAATAA0AAAAFABMAAAATAA0AAAAEABMAAAATAA0AAAADABMAAAATAA0AAAACABMAAAATAA0AAAAHABMAAAAUAA0AAAAHABQAAAAUAA4AAAAHABUAAAAUAA4AAAAHABYAAAAUAA4AAAA=")
tile_set = ExtResource("2_itmgn")

[node name="TextureRect" type="TextureRect" parent="Health"]
offset_left = 8.0
offset_top = 152.0
offset_right = 64.0
offset_bottom = 184.0
texture = ExtResource("15_fboio")
stretch_mode = 2

[node name="HealthLabel" type="Label" parent="Health"]
offset_left = 10.0
offset_top = 150.0
offset_right = 64.0
offset_bottom = 182.0
text = "0"
label_settings = SubResource("LabelSettings_g5cy7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gk3vg")
}

[connection signal="mouse_entered" from="Buy/BuyButtons/Spear" to="." method="_on_spear_mouse_entered"]
[connection signal="mouse_exited" from="Buy/BuyButtons/Spear" to="." method="_on_spear_mouse_exited"]
[connection signal="mouse_entered" from="Buy/BuyButtons/Bomb" to="." method="_on_bomb_mouse_entered"]
[connection signal="mouse_exited" from="Buy/BuyButtons/Bomb" to="." method="_on_bomb_mouse_exited"]
[connection signal="mouse_entered" from="Buy/BuyButtons/Fire" to="." method="_on_fire_mouse_entered"]
[connection signal="mouse_exited" from="Buy/BuyButtons/Fire" to="." method="_on_fire_mouse_exited"]
[connection signal="mouse_entered" from="Buy/BuyButtons/Electric" to="." method="_on_electric_mouse_entered"]
[connection signal="mouse_exited" from="Buy/BuyButtons/Electric" to="." method="_on_electric_mouse_exited"]
